<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".internal.view.EdgeActivity">

    <TextView
        android:id="@+id/peers_counter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="end"
        android:text="@string/peers_online"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MatrixSubTitle" />

    <TextView
        android:id="@+id/matrix_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="start"
        android:text="@string/matrix_multiply_title"
        app:layout_constraintTop_toBottomOf="@id/peers_counter"
        style="@style/MatrixTitle" />

    <LinearLayout
        android:id="@+id/matrix_size_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/matrix_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/matrix_size"
            style="@style/MatrixSubTitle" />

        <EditText
            android:id="@+id/matrix_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/matrix_sample_size_5" />

    </LinearLayout>

    <include
        android:id="@+id/matrix_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/matrix_size_holder"
        layout="@layout/matrix_multiply_block" />

    <include
        android:id="@+id/matrix_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/matrix_a"
        layout="@layout/matrix_multiply_block" />

    <Button
        android:id="@+id/matrix_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/matrix_multiply"
        app:layout_constraintBottom_toTopOf="@+id/matrix_result"
        app:layout_constraintEnd_toStartOf="@+id/logs"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MatrixButton" />

    <Button
        android:id="@+id/logs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/common_logs"
        app:layout_constraintBottom_toTopOf="@+id/matrix_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/matrix_multiply"
        style="@style/MatrixButton" />


    <TextView
        android:id="@+id/matrix_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/matrix_stub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/MatrixSubTitle" />

    <LinearLayout
        android:id="@+id/task_info"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/task_info_bg"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/task_info_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="10dp" />

        <TextView
            android:id="@+id/task_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            tools:text="Some Info" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>